--- a/public_html/css/custom-style.css
+++ b/public_html/css/custom-style.css
@@ -1,10 +1,14 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Sep 18, 2014, 1:57:44 PM
-    Author     : Student
-*/
+div{
+    border-style: solid;
+    border-width: 5px;
+    border-color: red;
+    padding: 30px;
+}
 
+.container{
+    border-color: red;
+}
+
+.row{
+    border-color: gray;
+}
